--- a/my-chatbot/src/App.css
+++ b/my-chatbot/src/App.css
@@ -58,14 +58,13 @@
     color: white;
     padding: 10px;
     border-radius: 20px;
-    margin: 5px 0;
+    margin: 10px 0;
     max-width: 75%;
     word-wrap: break-word;
 }
 
-/* Bot's messages style */
 .bot-message {
-    align-self: flex-start;
+    align-self: flex-start; /* Change to flex-start to align bot messages to the left */
     background-color: #e1e1e1;
     color: #333;
     padding: 10px;
@@ -73,6 +72,7 @@
     margin: 5px 0;
     max-width: 75%;
     word-wrap: break-word;
+    margin-left: auto; /* Add margin-left: auto to push it to the right */
 }
 
 /* Input container for typing new message */
